weird, it's literally never complained about an insecure websocket before

--- a/bangertron/index.html
+++ b/bangertron/index.html
@@ -7,15 +7,26 @@
 
 How to unleash the bangers:
 
+
+<div style="width: 1300px; height: 400px;">
 <h2>Step 1.</h2>
 
-
+<div style="float: right; border: 2px; padding: 3px; border-style: solid; border-color: purple; "><img src ="bt_step_1.gif" alt="Bangertron Step One." /></div>
 Drag this link >> <a href="javascript:(function(){ var script = document.createElement('script'); script.src = 'https://jeevesmkii.github.io/bangertron.js'; document.getElementsByTagName('head')[0].appendChild(script);})();">Bangertron 9000</a> <<
 to your browser's bookmark bar. (You only need to do this once.)
 
+
+</div>
+
+<p />
+
+<div style="width: 1300px; height: 400px;">
 <h2>Step 2.</h2>
 
+<div style="float: right; border: 2px; padding: 3px; border-style: solid; border-color: purple; "><img src ="bt_step_2.gif" alt="Bangertron Step Two." /></div>
 Go to <a href="https://www.youtube.com/">Youtube</a>.
+
+</div>
 
 <h2>Step 3.</h2>
 
