now with a TLS enabled banger server

--- a/bangertron/index.html
+++ b/bangertron/index.html
@@ -28,9 +28,15 @@ Go to <a href="https://www.youtube.com/">Youtube</a>.
 
 </div>
 
+<p />
+
+<div style="width: 1300px; height: 400px;">
+
 <h2>Step 3.</h2>
 
-Click the Bangertron 9000 bookmarklet and click play to begin the bangers. Bam!
+<div style="float: right; border: 2px; padding: 3px; border-style: solid; border-color: purple; "><img src ="bt_step_3.gif" alt="Bangertron Step Three." /></div>
+Click the Bangertron 9000 bookmarklet and then click play to begin the bangers. Bam!
 
+</div>
 </body>
 </html>
